# cs61c-fa20-labs

./: .gitignore
lab01/: CMakeLists.txt  gdb.txt  ll_cycle.c
lab02/: CMakeLists.txt  bit_ops.c  lfsr.c  vector.c
lab03/: cc_test.s  ex1.s  ex2.s  factorial.s  list_map.s
